# heimaclaw

./: .gitignore  ANALYSIS.md  Dockerfile  EVENT_BUS_COMPLETE_REPORT.md  EVENT_BUS_INTEGRATION_SUMMARY.md  README.md  SPEC.md  demo_event_bus.py  deploy_event_bus.sh  environment.yml  mypy.ini  pyproject.toml  setup.sh  sync_standards.sh  test_llmresponse_fix.py  verify_event_bus.py
.github/workflows/: ci.yml
.openclaw/event-bus/: main.jsonl
.openclaw/subagent-state/: registry.json
config/: config.toml  config.toml.template
deploy/: README.md  heimaclaw.service
docker/: Dockerfile.base
docs/: AGENT_COMPARISON.md  AGENT_INTEGRATION_PLAN.md  BEGINNER_GUIDE.md  CI_TROUBLESHOOTING.md  E2E_TEST_PLAN.md  EVENT_BUS_SUBAGENT.md  FEISHU_GROUP_ID.md  KERNEL-REBUILD-SPEC.md  MULTI_AGENT_PLAN.md  PHASE1_REPORT.md  PHASE2.2_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PROJECT_STATUS.md  PROPOSAL_MARKDOWN_CONFIG.md  USER_GUIDE.md
memory/: 2026-03-18.md
memory_temp_backup/: 2026-03-18.md  2026-03-19.md
scripts/: build-rootfs.sh  build-vmlinux.sh  docker-deploy.sh  install.sh  setup_conda_env.sh  test-vsock.py  update-rootfs.sh
src/heimaclaw/: SPEC.md  (+9 more)
standards/: AGENT-MANAGEMENT-v1.0.md  ARCHITECTURE-v1.0.md  CLI-COMMANDS-v1.0.md  CODE-STYLE-v1.0.md  DEEPAGENTS_ANALYSIS-v1.0.md  DOCKER-SANDBOX-ARCHITECTURE-v1.0.md  DOCKER-SANDBOX-ARCHITECTURE-v2.0.md  EPIC-DYNAMIC-PROGRESS-CARD-PLAN.md  EVENT_BUS_ARCHITECTURE-v1.0.md  MULTI-PROCESS-ARCHITECTURE-v1.0.md  PRE-LAUNCH-AUDIT-v1.0.md  PROJECT-DECISION-LOG-v1.0.md  PROJECT-STATUS-v1.0.md  README-v1.0.md  SANDBOX-v1.0.md  VSOCK-TROUBLESHOOTING-v1.0.md  WRITE_TODOS-v1.0.md
tests/: __init__.py  test_cli.py
(+114 files in other folders)
